-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 RC1
-
None
-
64-bit Windows 7, 32-bit Qt MSVC 2010 OpenGL
-
Document -plugin: 5af8a46bc1275da3210047e4f94c3ecbb40ab550 (branch 5.3, 19.6.2014, fix version 5.3.2)
There was a change made between 5.2.1 and 5.3.0RC that has the QApplication (through the QGuiApplication initialization) treating certain command line arguments starting with two dashes the same way as if they had been put in with one dash. Some of these built-in options (like -reverse, -stylesheet, etc.) are already documented, but -plugin (and possibly -session and -psn_ for Macs) don't seem to be documented (or at least I wasn't able to find anything on them).
(This was problematic for us, because we have been using custom load/initialization routines on a list of custom DLLs passed in as command line arguments prefixed with --plugin, and suddenly we were no longer getting our DLLs loaded.)
I also noticed that QApplication and QGuiApplication both have a section where they describe command line options that are supported, but they have different lists, even though they both start with the sentence: "All Qt programs automatically support the following command line options". I don't know if that was intentional or not to show different lists (since one's directed at GUI applications), but the wording there seems misleading.
It would be nice if there were one place where all these built-in command line options were described, along with the fact that --<arg> and -<arg> will be treated the same for these options, and everywhere in the documentation where these options were mentioned could reference the same documentation.